--- a/index.html
+++ b/index.html
@@ -28,39 +28,37 @@
     </p>
 
     <form action="/" method="GET">
-      <div>
-        <input type="radio" id="rating-1" name="rating" value="1">
-        <label for="rating-1">
-          <span>1</span>
-        </label>
-      </div>
-
-      <div>
-        <input type="radio" id="rating-2" name="rating" value="2">
-        <label for="rating-2">
-          <span>2</span>
-        </label>
-      </div>
-
-      <div>
-        <input type="radio" id="rating-3" name="rating" value="3">
-        <label for="rating-3">
-          <span>3</span>
-        </label>
-      </div>
-
-      <div>
-        <input type="radio" id="rating-4" name="rating" value="4">
-        <label for="rating-4">
-          <span>4</span>
-        </label>
-      </div>
-
-      <div>
-        <input type="radio" id="rating-5" name="rating" value="5">
-        <label for="rating-5">
-          <span>5</span>
-        </label>
+      <div class="custom-radios">
+        <div>
+          <input type="radio" id="rating-1" name="rating" value="1">
+          <label for="rating-1">
+            <span>1</span>
+          </label>
+        </div>
+        <div>
+          <input type="radio" id="rating-2" name="rating" value="2">
+          <label for="rating-2">
+            <span>2</span>
+          </label>
+        </div>
+        <div>
+          <input type="radio" id="rating-3" name="rating" value="3">
+          <label for="rating-3">
+            <span>3</span>
+          </label>
+        </div>
+        <div>
+          <input type="radio" id="rating-4" name="rating" value="4">
+          <label for="rating-4">
+            <span>4</span>
+          </label>
+        </div>
+        <div>
+          <input type="radio" id="rating-5" name="rating" value="5">
+          <label for="rating-5">
+            <span>5</span>
+          </label>
+        </div>
       </div>
     <button>Submit</button>
   </form>
