Add submit button styles

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </label>
         </div>
       </div>
-    <button>Submit</button>
+    <button id="rating-submit">SUBMIT</button>
   </form>
 
   </div>
