Add rating container styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <!-- Rating state start -->
-  <div>
+  <div class="rating-container">
     <img src="/images/icon-star.svg">
     <h1>How did we do?</h1>
 
