--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
   <!-- Rating state start -->
   <div class="rating-container">
-    <img src="/images/icon-star.svg">
+    <div class="rating-badge">
+      <img src="/images/icon-star.svg">
+    </div>
     <h1>How did we do?</h1>
-
+    
     <p>
       Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!
