--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!
     </p>
-    <form action="/" method="GET">
+    <form id="rating-form" action="/" method="GET">
       <div class="custom-radios">
         <div>
           <input type="radio" id="rating-1" name="rating" value="1">
