Add rating-confirm styles

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <!-- Rating state end -->
     <!-- Thank you state start -->
     <div class="rating-confirm hide">
-      <img src="/images/illustration-thank-you.svg">
-      <div>
+      <img class="rating-image" src="/images/illustration-thank-you.svg">
+      <div class="rating-confirm-text">
         You selected<!-- Add rating here --> out of 5
       </div>
       <h1>Thank you!</h1>
